# Sumaia_robot

./: CMakeLists.txt  README.md  package.xml
MAZE/: MAZE.sdf
launch/: MAZE.launch  amcl_move_base.launch  gazebo.launch  gmapping.launch  rviz.launch
maps/: Sumaia_Maze_map.yaml
navstack_pub/: CMakeLists.txt  package.xml
navstack_pub/src/: send_goals.cpp
param/: base_local_planner_params.yaml
rviz/: gmapping.rviz  navigation.rviz  rviz.rviz
scripts/: keyboard_teleop.py  move.py
urdf/: srobot.gazebo  srobot.xacro
worlds/: MAZE.config  newnew.world  srobot.world
