<?xml version="1.0"?>
<package format="2">
  <name>Sumaia_robot</name>
  <version>1.0.0</version>
  <description>The Sumaia_robot package</description>

  <maintainer email="sumaiaedris1@hotmail.com">Sumaia Edris</maintainer>

  <license>BSD</license>

  <url type="website"></url>

  <author email="sumaiaedris1@hotmail.com">Sumaia</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>

</package>
